# smpp-sms

./: API-CONTRACTS.md  ARCHITECTURE.md  PHASE1-INFRASTRUCTURE.md  PHASE10-TESTING.md  PHASE3-SMPP-ENGINE.md  PHASE4-PIPELINE.md  PHASE5-DLR.md  PHASE6-SECURITY.md  PHASE7-BILLING.md  PHASE8-OBSERVABILITY.md  PHASE9-DEPLOYMENT.md  README.md  docker-compose.yml
.github/workflows/: deploy.yml
deploy/: firewallsetup.sh  nginx.conf  rollback.sh  tls-setup.sh
docker/: nginx.conf  prometheus.yml
laravel/: .env.example  Dockerfile  artisan  composer.json  laravel-smpp-worker.service
laravel/app/Jobs/: DLRReceived.php  ProcessMessageSubmission.php
laravel/app/Models/: Message.php  Provider.php  Route.php  SmppClient.php  Tariff.php  Tenant.php  User.php  Wallet.php
laravel/bootstrap/: app.php
laravel/config/: queue-rabbitmq.php
laravel/database/: init.sql
laravel/public/: index.php
laravel/routes/: api.php  console.php  user.php  web.php
prompt/: mainprompt.md
scripts/: backup.sh  bootstrap.ps1  deploy.sh  restore.sh  setup-local.bat  test-e2e.sh
smpp-engine/: Dockerfile  pyproject.toml  smpp-engine.service
smpp-engine/src/smpp_engine/: __init__.py  __main__.py  client_repository.py  config.py  dlr_processor.py  http_provider.py  idempotency.py  message_handler.py  metrics.py  observability.py  provider_connector.py  rate_limiter.py  retry.py  server.py  session_manager.py  upstream_provider.py  validator.py
smpp-engine/tests/: test_flow.py  test_security.py  test_unit.py
smpp-mock/: Dockerfile  pyproject.toml
smpp-mock/src/smpp_mock/: __main__.py
(+40 files in other folders)
