[project]
name = "smpp-engine"
version = "0.1.0"
description = "SMPP protocol engine for SMS platform"
requires-python = ">=3.11"

dependencies = [
    "aio-pika>=9.0.0",
    "asyncpg>=0.29.0",
    "aioredis>=2.0.0",
    "smpplv>=1.0.0",
    "structlog>=24.0.0",
    "prometheus-client>=0.20.0",
    "cryptography>=42.0.0",
    "pydantic>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/smpp_engine"]

[tool.hatch.envs.default]
dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "mypy>=1.0.0",
    "ruff>=0.4.0",
]