[project]
name = "smpp-mock"
version = "0.1.0"
description = "Mock SMPP provider for local testing"
requires-python = ">=3.11"

dependencies = [
    "smpplv>=1.0.0",
    "uvloop>=0.19.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/smpp_mock"]